4.x: Observable.merge API reduction (#8176)
* 4.x: Observable.merge API reduction

* Improve default config constants, Eclipse-based fixes